Bug 219667 - Graphical bug with tooltip
Summary: Graphical bug with tooltip
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Unspecified
: NOR normal
Target Milestone: ---
Assignee: System Settings Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-12-22 13:11 UTC by BRULE Herman
Modified: 2010-01-05 17:17 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (125.36 KB, image/png)
2009-12-22 13:12 UTC, BRULE Herman
Details

Note You need to log in before you can comment on or make changes to this bug.
Description BRULE Herman 2009-12-22 13:11:55 UTC
Version:            (using Devel)
Installed from:    Compiled sources

Hello, I have graphical bug with tooltip, I see a black border, see the screenshot.
Thanks
Comment 1 BRULE Herman 2009-12-22 13:12:21 UTC
Created attachment 39239 [details]
screenshot
Comment 2 BRULE Herman 2009-12-22 13:12:40 UTC
Note: I'm in the kde 4.4 beta2
Comment 3 Dario Andres 2009-12-22 13:32:55 UTC
- Have you enabled and disabled Desktop Effects during the session that bug appeared ?
Thanks

- 

- Has activado o desactivado los efectos de escritorio durante la misma sesión en la que apareció ese error gráfico ?
- Gracias
Comment 4 BRULE Herman 2009-12-22 13:36:08 UTC
- No, I have desktop effect disabled, add it do that's after reboot too.

Sorry, I live I spain for my wife but I don't speak spanish, only french and english.
Comment 5 Dario Andres 2009-12-22 13:43:34 UTC
No problem :)
Comment 6 Ben Cooksley 2009-12-22 21:04:34 UTC
Reproducible. Only occurs when Desktop Effects are unavailable.
Adding Peter to see if he knows why this is occurring, since it likely affects Dolphin too.
Comment 7 Peter Penz 2009-12-23 10:00:38 UTC
@Ben: oh, I did not test the code without Desktop Effects :-( There are 2 issues here:

1. Transparency is not available without Desktop Effects, so I'd have to adjust the code to draw edgy corners instead of round corners for this case.

2. Also the right border is because of this, but this just seems to be a +1/-1 issue in the drawing code.

I'll take care to fix this in Dolphin and will share the code (hopefully in 4.5 we can get in the tooltips code to kdelibs ;-))
Comment 8 Ben Cooksley 2009-12-23 23:56:59 UTC
@Peter: When you commit the fix I will grab it ( commitfilter )
Comment 9 Peter Penz 2010-01-05 17:17:39 UTC
SVN commit 1070424 by ppenz:

Prevent black borders when compositing has been disabled.

BUG: 219667
CCMAIL: sourtooth@gmail.com

 M  +13 -9     ktooltipwindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1070424