Prevent black borders when compositing has been disabled.

BUG: 219667
CCMAIL: sourtooth@gmail.com

svn path=/trunk/KDE/kdebase/apps/; revision=1070424